<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".presentation.info.ui.InfoFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_arrow_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/city_name"
        android:layout_width="0dp"
        android:layout_marginEnd="80dp"
        android:layout_height="wrap_content"

        android:ellipsize="end"
        android:layout_marginStart="12dp"
        android:layout_marginTop="50dp"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/flag_image"
        app:layout_constraintTop_toBottomOf="@id/back_button"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/city_name"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/temperature_feels_like"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/temperature"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/pressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/temperature_feels_like"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/pressure"
        tools:text="Moscow" />

    <TextView
        android:id="@+id/wind_speed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@id/back_button"
        app:layout_constraintTop_toBottomOf="@id/humidity"
        tools:text="Moscow" />

    <ImageView
        android:id="@+id/weather_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/city_name"
        android:layout_marginStart="24dp"
        app:layout_constraintTop_toTopOf="@id/city_name"
        app:layout_constraintBottom_toBottomOf="@id/city_name"
        android:contentDescription="@string/weather_image" />

    <ImageView
        android:id="@+id/flag_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_image"
        app:layout_constraintBottom_toBottomOf="@id/city_name"
        app:layout_constraintStart_toStartOf="@+id/back_button"
        app:layout_constraintTop_toTopOf="@id/city_name" />


    <LinearLayout
        android:id="@+id/not_found_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/image_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/not_found"
            android:src="@drawable/ic_nothing_is_found" />

        <TextView
            android:textAlignment="center"
            android:padding="14dp"
            android:id="@+id/text_not_found"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/weather_search_error"
            android:textSize="20sp" />

    </LinearLayout>


    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        />


</androidx.constraintlayout.widget.ConstraintLayout>